<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/find_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_current_location"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/textview_background_border"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_location" />

    <Button
        android:id="@+id/get_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_location"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/my_local_green"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <Button
        android:id="@+id/show_map_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map_location"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/my_local_green"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_location_btn" />

    <Button
        android:id="@+id/show_partner_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_partner_location"
        android:textAllCaps="false"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/my_local_green"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_map_location_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>